<resources>
    <string name="app_name">recipe-book</string>

    <string name="suggest_meal_activity_title">Suggest Meal</string>
    <string name="suggest_meal_surprise_me_button">Surprise Me</string>
    <string name="suggest_meal_meat_label">MEAT</string>
    <string name="suggest_meal_pareve_label">PAREVE</string>
    <string name="suggest_meal_dairy_label">DAIRY</string>
    <string name="suggest_meal_cook_time_label">COOK TIME:</string>
    <string name="suggest_meal_show_cook_time_button">Show cook time</string>

    <string name="cook_time_hours_label">hr</string>
    <string name="cook_time_minutes_label">mins</string>

    <string name="add_recipe_activity_title">Add Recipe</string>
    <string name="add_recipe_food_name">Food Name:</string>
    <string name="add_recipe_status">Status</string>
    <string name="add_recipe_cook_time">Cook Time</string>
    <string name="add_recipe_add">Add</string>
    <string name="add_recipe_no_food_name">Food Name field cannot be blank</string>


</resources>