<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="20dp"
        >

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/buttonMeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_kosher_classification"
            android:textColor="@color/white"
            android:text="@string/suggest_meal_meat_label"
            android:layout_weight="1"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/buttonPareve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_kosher_classification"
            android:textColor="@color/white"
            android:text="@string/suggest_meal_pareve_label"
            android:layout_weight="1"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <Button
            android:id="@+id/buttonDairy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_kosher_classification"
            android:textColor="@color/white"
            android:text="@string/suggest_meal_dairy_label"
            android:layout_weight="1"
            />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:text="@string/suggest_meal_surprise_me_button"
        />

</RelativeLayout>
