<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="25dp"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/view_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toLeftOf="@id/edit_text_food_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:text="@string/add_recipe_food_name"
        tools:text="@string/add_recipe_food_name"
        />

    <EditText
        android:id="@+id/edit_text_food_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/view_food_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_food_name"
        app:layout_constraintBottom_toBottomOf="@id/view_food_name"
        />

    <TextView
        android:id="@+id/view_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toLeftOf="@id/edit_text_status"
        app:layout_constraintTop_toBottomOf="@id/view_food_name"
        android:layout_marginTop="35dp"
        android:text="@string/add_recipe_status"
        tools:text="@string/add_recipe_status"
        />

    <EditText
        android:id="@+id/edit_text_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/view_status"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_status"
        app:layout_constraintBottom_toBottomOf="@id/view_status"
        />

    <TextView
        android:id="@+id/view_cook_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toLeftOf="@id/edit_text_cook_time"
        app:layout_constraintTop_toBottomOf="@id/view_status"
        android:layout_marginTop="35dp"
        android:text="@string/add_recipe_cook_time"
        tools:text="@string/add_recipe_cook_time"
        />


    <EditText
        android:id="@+id/edit_text_cook_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/view_cook_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_cook_time"
        app:layout_constraintBottom_toBottomOf="@id/view_cook_time"
        />

    <Button
        android:id="@+id/button_add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_recipe_add"
        tools:text="@string/add_recipe_add"
        />

</androidx.constraintlayout.widget.ConstraintLayout>